name:                opalplay
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/opalplay#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:  Arrows
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , TemplateHaskell
  exposed-modules:     Opalplay.Model
                     , Opalplay.Simple
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , opaleye >= 0.5.0.0
                     , product-profunctors
                     , text
                     , time
                     , uuid

executable opalplay
  hs-source-dirs:      bin
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , opalplay
